<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jorda.xavi.xjmportfolioapps.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainTitle"
        android:layout_weight="0.10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"/>

        <ScrollView
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="380dp"
            android:weightSum="1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:text="@string/Popular_Movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/button"
                    android:onClick="onCustomClick"/>

                <Button
                    android:text="@string/Stock_Hawk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/button2"
                    android:onClick="onCustomClick"/>

                <Button
                    android:text="@string/Build_it_Bigger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/button3"
                    android:onClick="onCustomClick"/>

                <Button
                    android:text="@string/Make_Your_App_Material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/button4"
                    android:onClick="onCustomClick"/>

                <Button
                    android:text="@string/Go_Ubiquitous"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/button5"
                    android:onClick="onCustomClick"/>

                <Button
                    android:text="@string/Capstone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/button6"
                    android:onClick="onCustomClick"/>

            </LinearLayout>
        </ScrollView>
</RelativeLayout>
